--- a/index.html
+++ b/index.html
@@ -9,9 +9,5 @@
     <script src="./js/task-3.js" type="module" defer></script>
   </head>
 
-  <body>
-    <ul>
-      <li>1</li>
-    </ul>
-  </body>
+  <body></body>
 </html>
